--- a/MLModel1_2.ipynb
+++ b/MLModel1_2.ipynb
@@ -110,7 +110,9 @@
       "source": [
         "#filename = \"train-data_all-train-events.zip\"\n",
         "#filename = \"train-data-2022062020220626.zip\"\n",
-        "filename = \"train-events-20-min.zip\""
+        "filename = \"train-events-20-min.zip\"\n",
+        "#measurement = { 'unit' : 'miles', 'size' : 1.0 }\n",
+        "measurement = { 'unit' : 'minutes', 'size' : 10.0 }"
       ],
       "metadata": {
         "id": "M3W7KKZc8f92"
@@ -1168,7 +1170,7 @@
       "cell_type": "markdown",
       "source": [
         "# Determine NextMilepost\n",
-        "Thisa will be the value we are attempting to learn"
+        "This will be the value we are attempting to learn"
       ],
       "metadata": {
         "id": "M6ikvyh2mKvw"
@@ -1177,12 +1179,25 @@
     {
       "cell_type": "code",
       "source": [
-        "def findNextMilepost(trainsEntry, actualsEntry):\n",
+        "def findNextTime(trainsEntry, actualsEntry, timeInMinutes):\n",
+        "  #print(actualsEntry.iloc[4]['speedMPH'], \" - \",trainsEntry['lastReportedPosition.speedMPH'] )\n",
+        "  return (abs(actualsEntry.iloc[timeInMinutes // 2]['speedMPH']) - abs(trainsEntry['lastReportedPosition.speedMPH']))"
+      ],
+      "metadata": {
+        "id": "HsFWDlcWROcp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def findNextMilepost(trainsEntry, actualsEntry, distance):\n",
         "  currMilepost = trainsEntry['lastReportedPosition.milepostLocation.milepost.milepostNumber']\n",
-        "  value  = actualsEntry.loc[actualsEntry['milepostLocation.milepost.milepostNumber'] > currMilepost+1]\n",
+        "  value  = actualsEntry.loc[actualsEntry['milepostLocation.milepost.milepostNumber'] > currMilepost + distance]\n",
         "  if (len(value) > 0) :\n",
         "    return value[value['milepostLocation.milepost.milepostNumber'] == value['milepostLocation.milepost.milepostNumber'].min()]\n",
-        "  value  = actualsEntry.loc[actualsEntry['milepostLocation.milepost.milepostNumber'] < currMilepost-1]\n",
+        "  value  = actualsEntry.loc[actualsEntry['milepostLocation.milepost.milepostNumber'] < currMilepost - distance]\n",
         "  if (len(value) > 0):\n",
         "    return value[value['milepostLocation.milepost.milepostNumber'] == value['milepostLocation.milepost.milepostNumber'].max()]\n",
         "  return []"
@@ -1197,7 +1212,13 @@
       "cell_type": "code",
       "source": [
         "def findNextSpeed(trainsEntry, actualsEntry):\n",
-        "  nextActual = findNextMilepost(trainsEntry, actualsEntry)\n",
+        "  if (measurement.get('unit') == 'miles'):\n",
+        "    nextActual = findNextMilepost(trainsEntry, actualsEntry, measurement.get('size'))\n",
+        "  elif (measurement.get('unit') == 'minutes'):\n",
+        "    nextActual = findNextTime(trainsEntry, actualsEntry, measurement.get('size'))\n",
+        "  else:\n",
+        "    raise Exception('unknown measurement', measurement.get('unit'))\n",
+        "    \n",
         "  if (len(nextActual) > 0):\n",
         "    amt = (abs(nextActual.iloc[0]['speedMPH']) - abs(trainsEntry['lastReportedPosition.speedMPH']))\n",
         "    return amt;\n",
@@ -1975,7 +1996,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Use Decision Tree to predict speed in 1 mile"
+        "# Use Decision Tree to predict next speed"
       ],
       "metadata": {
         "id": "mg1p1vouBeIB"
@@ -2045,11 +2066,11 @@
         "print(\"We will partition this set at day of year:\", dateValues.index[math.trunc(dateValues.size * .66)])"
       ],
       "metadata": {
-        "id": "cJkyrhnpt2T2",
-        "outputId": "559fa158-c8fa-420d-e46f-726f6c02c508",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cJkyrhnpt2T2",
+        "outputId": "559fa158-c8fa-420d-e46f-726f6c02c508"
       },
       "execution_count": 212,
       "outputs": [
