--- a/PhysicsBEoPBaseline.ipynb
+++ b/PhysicsBEoPBaseline.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/swicklund/hackathon/blob/main/PhysicsBEoPBaseline.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 1,
       "metadata": {
         "id": "f18J8QM17E0a"
       },
@@ -36,18 +46,18 @@
       "metadata": {
         "id": "_wNuGIFQT0nZ"
       },
-      "execution_count": 24,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TpnuFITI6Tzu",
-        "outputId": "03add313-4406-45fc-feff-87ce0295c695"
+        "outputId": "6a1629b8-a024-407b-e957-551c644fff02"
       },
       "outputs": [
         {
@@ -72,52 +82,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "srQJL7OKVRww",
-        "outputId": "983c03cd-225b-465d-c130-11055f88fdf6"
+        "outputId": "a5dd91fa-2bcd-4852-b62c-4855382d44e5"
       },
-      "execution_count": 26,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Copying gs://trains_data/train-data-2022062020220626.zip...\n",
-            "Copying gs://trains_data/train-data-master-2.zip...\n",
-            "Copying gs://trains_data/train-data-master.zip...\n",
             "Copying gs://trains_data/train-data_all-train-events.zip...\n",
-            "| [4 files][828.4 MiB/828.4 MiB]   72.4 MiB/s                                   \n",
-            "==> NOTE: You are performing a sequence of gsutil operations that may\n",
-            "run significantly faster if you instead use gsutil -m cp ... Please\n",
-            "see the -m section under \"gsutil help options\" for further information\n",
-            "about when gsutil -m can be advantageous.\n",
-            "\n",
-            "Copying gs://trains_data/train-events-20-min.zip...\n",
-            "/ [5 files][869.0 MiB/869.0 MiB]   72.2 MiB/s                                   \n",
-            "Operation completed over 5 objects/869.0 MiB.                                    \n"
+            "- [1 files][ 57.1 MiB/ 57.1 MiB]                                                \n",
+            "Operation completed over 1 objects/57.1 MiB.                                     \n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "eKb8izmgTzmA"
-      },
-      "execution_count": 26,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 5,
       "metadata": {
         "id": "ckXLQ7eQ7E0c"
       },
       "outputs": [],
       "source": [
-        "# z = zipfile.ZipFile('train-data_all-train-events.zip', 'r')\n",
-        "\n",
         "x = {}\n",
         "trains = {}\n",
         "i = 1\n",
@@ -142,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 6,
       "metadata": {
         "id": "lgWV768N7E0d"
       },
@@ -159,12 +146,12 @@
       ],
       "metadata": {
         "id": "U7eMpqp_RehS",
-        "outputId": "4c24da67-4599-4e17-c529-527375a71ec0",
+        "outputId": "92f86b5b-689d-4255-8c2e-151e4819b8c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,13 +183,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Idznxze77E0e",
-        "outputId": "fa7c9c7e-b539-4de5-c96c-008960860fab"
+        "outputId": "26fc5c43-010e-401a-a61f-2a84ab7998d6"
       },
       "outputs": [
         {
@@ -287,9 +274,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EtDaoWZLPxIE",
-        "outputId": "f263c307-9837-4e96-9fa0-2eb3fbad24dc"
+        "outputId": "2f2784eb-1383-4557-cd9e-5a7db709c3a3"
       },
-      "execution_count": 31,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +312,7 @@
       "metadata": {
         "id": "pqfGofcd7BCn"
       },
-      "execution_count": 32,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -342,9 +329,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JOkpJ6qJbG8Y",
-        "outputId": "05053072-49ee-472a-ec88-28b4f226525f"
+        "outputId": "2c94cbe5-6c26-4e98-fb1c-75f4715a26a9"
       },
-      "execution_count": 33,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +379,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 11
         }
       ]
     },
@@ -425,7 +412,7 @@
       "metadata": {
         "id": "_xIRdGqGwTXZ"
       },
-      "execution_count": 34,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -451,9 +438,9 @@
           "height": 621
         },
         "id": "qKdCmnM5B5s8",
-        "outputId": "370276c7-8438-415a-8133-0a64924e3716"
+        "outputId": "5106129c-f418-44cf-c151-811e26883c79"
       },
-      "execution_count": 35,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -477,7 +464,7 @@
       "metadata": {
         "id": "B5k0HIV5A732"
       },
-      "execution_count": 35,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -487,12 +474,12 @@
       ],
       "metadata": {
         "id": "jxJ51XeN-rzg",
-        "outputId": "d355e627-e4c9-438c-ee39-6815c59e3a2c",
+        "outputId": "58d4f119-1d77-484c-9e6d-88394304a710",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -681,7 +668,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 14
         }
       ]
     },
@@ -693,13 +680,13 @@
       ],
       "metadata": {
         "id": "eLjAgvTqemtA",
-        "outputId": "b34f4b38-3623-4d9d-b1ab-fec4d99f930b",
+        "outputId": "68474a22-cc9b-4b4b-8d85-4a641af25ee9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 184
         }
       },
-      "execution_count": 37,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "error",
@@ -708,7 +695,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-37-59369cb06507>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvals\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrains\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mvals\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'constant'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconstant_values\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-15-59369cb06507>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvals\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrains\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mvals\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'constant'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconstant_values\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'iloc'"
           ]
         }
@@ -854,7 +841,8 @@
   "metadata": {
     "colab": {
       "name": "PhysicsBEoPBaseline.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "interpreter": {
       "hash": "99fae7d265480b5fbb0cf965db398c4d2d7b17b55f6259418c7dbfe0de01ea90"
